--- a/examples/Lecture29/after/index.html
+++ b/examples/Lecture29/after/index.html
@@ -8,10 +8,63 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
   </head>
 <body>
 
+<header>
+  <nav id="header-nav" class="navbar navbar-default" >
+    <div class="container">
+      <div class="navbar-header">
+        <a href="index.html" class="pull-left visible-md visible-lg">
+          <div id="logo-img" alt="Logo image"></div>
+        </a>
+        <div class="navbar-brand">
+          <a href="index.html"><h1>David Chu's China Bistro</h1></a>
+          <p>
+            <img src="images/item.png" alt="Kosher certification">
+            <span>Kosher Certufied</span>
+          </p>
+        </div>
 
+        <button type="button" class="navbar-toggle collapsed"
+        data-toggle="collapse" data-target="#bcollapsable-nav" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        </button>
+      </div>
+
+      <div id="collapsable-nav" class="collapse navbar-collapse">
+        <ul id="nav-list" class="nav navbar-nav navbar-right">
+          <li>
+            <a href="menu-categories.html">
+              <span class="glyphicon glyphicon-cutlery"></span><br
+              class="hidden-xs"> Menu </a>
+          </li>
+
+          <li>
+            <a href="#">
+              <span class="glyphicon glyphicon-info-sign"></span><br
+              class="hidden-xs"> About</a>
+            </a>
+          </li>
+
+          <li>
+            <a href="#">
+              <span class="glyphicon glyphicon-certificate"></span>
+              <br class="hidden-xs"> Awards</a>
+          </li>
+
+          <li>
+            bcc
+          </li>
+        </ul>
+      </div>
+
+    </div>
+</header>
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
   <script src="js/jquery-2.1.4.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
