--- a/examples/Lecture29/after/index.html
+++ b/examples/Lecture29/after/index.html
@@ -28,7 +28,7 @@
         </div>
 
         <button type="button" class="navbar-toggle collapsed"
-        data-toggle="collapse" data-target="#bcollapsable-nav" aria-expanded="false">
+        data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -57,14 +57,81 @@
               <br class="hidden-xs"> Awards</a>
           </li>
 
-          <li>
-            bcc
+          <li id="phone" class="hidden-xs">
+            <a href="tel: 400-xxx-xxxx">
+              <span>400-xxx-xxxx</span>
+            </a>
+            <div>
+              * We Deliver
+            </div>
           </li>
         </ul>
       </div>
-
     </div>
 </header>
+
+<div id="main-content" class="container">
+  <div class="jumbotron">
+    <img src="images/Screen.png" alt="Picture of restanrant"
+    class="img-responsive visible-xs">
+  </div>
+
+  <div id="home-tiles" class="row">
+    <div class="col-md-4 col-sm-6 col-xs-12">
+    <a href="menu-categories.html"><div id="menu-tile"><span>menu
+    </span></div></a>
+  </div>
+
+  <div class="col-md-4 col-sm-6 col-xs-12">
+    <a href="single-category.html"><div id="specials-tile"><span>
+      specials</span></div></a>
+  </div>
+
+
+  <div class="col-md-4 col-sm-12 col-xs-12">
+    <a href="" target="_blank">
+      <div id="map-tile">
+        <span>
+          map
+        </span>
+      </div>
+    </a>
+  </div>
+
+
+  </div>
+</div>
+
+<footer class="panel-footer">
+  <div class="container">
+    <div class="row">
+
+      <section id="hours" class="col-sm-4">
+        <span>Hours:</span><br>
+        Sun-Thurs: 11:15am - 10:00pm<br>
+        FriL 11:15am - 2:30pm<br>
+        Saturday Closed
+        <hr class="visible-xs">
+      </section>
+
+      <section id="address" class="col-sm-4">
+        <span>Address:</span><br>
+        7150 Reistertown Road<br>
+        Baltimore, MD 21215
+        <p>* Delivery area within 3 miles</p>
+        <hr class="visible-xs">
+      </section>
+
+      <section id="testimonials" class="col-sm-4">
+        <p>"The best Chinese restaurant I've been to! And that's...</p>
+        <p>xxxxxxxxxxxxxxx</p>
+      </section>
+    </div><!-- row -->
+
+    <div class="text-center">&copy; Copyright by XXX</div>
+  </div> <!-- container -->
+</footer>
+
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
   <script src="js/jquery-2.1.4.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
